--- a/data/news.html
+++ b/data/news.html
@@ -37,13 +37,46 @@
               <span class="doc-date">{{doc.publishedDate}}</span>
               </div>
               <div class="doc-body">
-                <img class="doc-image" src="{{doc.image}}"/>
+                <img class="doc-image" ng-show="doc.image" src="{{doc.image}}"/>
                 <div class="doc-summary">{{doc.summary}}</div>
               </div>
+              <div ng-show="doc.topics.length || doc.tags.length || doc.entities.length">
+                <img class="doc-extra-img" 
+                   ng-show="!shown[doc.url]"
+                   ng-click="toggleDocExtras(doc.url)"
+                   ng-src="{{dataUrl + 'images/arrow-right.png'}}"/>
+               <img class="doc-extra-img" 
+                   ng-show="shown[doc.url]"
+                   ng-click="toggleDocExtras(doc.url)"
+                   ng-src="{{dataUrl + 'images/arrow-down.png'}}"/>
+                <div ng-show="shown[doc.url]">
+                    <div ng-show="doc.topics.length">
+                      <span class="doc-extra-term">
+                        Topics:
+                      </span>
+                      <span>
+                        {{doc.topics.join(", ")}}
+                      </span>
+                    </div>
+                    <div ng-show="doc.tags.length">
+                      <span class="doc-extra-term">
+                        Tags:
+                      </span>
+                      <span>
+                        {{doc.tags.join(", ")}}
+                      </span>
+                    </div>
+                    <div ng-show="doc.entities.length">
+                      <span class="doc-extra-term">
+                        Entities:
+                      </span>
+                      <span>
+                        {{doc.entities.join(", ")}}
+                      </span>
+                    </div>
+                </div>
+              </div>
            </div>
-
-           <pre>
-           </pre>
          </div>
         </div>
     </body>
