--- a/data/news.html
+++ b/data/news.html
@@ -1,104 +1,20 @@
 <!doctype html>
-<html ng-app="newsDebugApp">
+<html>
     <head>
         <meta charset="utf-8">
-        <title>About News Debug</title>
+        <title>About News</title>
     </head>
-    <body ng-cloak>
-        <div class="container" ng-controller="newsShowCtrl">
-        <!--
-         <div class="btn-group">
-             <button id="sitesTab" class="btn" ng-click="toggleConfigureSites()">Configure Data Sites</button>
-             <button id="scoreTab" class="btn" ng-click="toggleScoreSites()">Score Data Sites</button>
-         </div>
-         -->
-         <div class="mainContent">
-            <form ng-submit="showDocs()" style="display: inline">
-              <select
-                ng-model="siteName"
-                ng-options="value for value in siteNames">
-                <option value="">-- choose site --</option>
-              </select>
-              <select
-                ng-model="rankerName"
-                ng-options="value for value in rankerNames">
-                <option value="">-- choose ranker --</option>
-              </select>
-              <input ng-disabled="!rankerName || !siteName"
-                     type="submit"
-                     value="Submit" />
-            </form>
-            Order by
-            <input type="radio" ng-model="docOrder" value="score" ng-change="orderDocs()"> Score
-            <input type="radio" ng-model="docOrder" value="date" ng-change="orderDocs()"> Date
-
-            <div ng-show="rankedDocs" class="page-walk">
-              <div class="page-walk-pnum">
-              Page <input type="number" ng-model="page" size=3/>
-              </div>
-              <img class="page-walk-img"
-                   ng-click="pageWalk('first')"
-                   ng-src="{{dataUrl + 'images/rewind.png'}}"/>
-              <img class="page-walk-img"
-                   ng-click="pageWalk('prev')"
-                   ng-src="{{dataUrl + 'images/arrow-left.png'}}"/>
-              <img class="page-walk-img"
-                   ng-click="pageWalk('next')"
-                   ng-src="{{dataUrl + 'images/arrow-right.png'}}"/>
-              <img class="page-walk-img"
-                   ng-click="pageWalk('last')"
-                   ng-src="{{dataUrl + 'images/forward.png'}}"/>
-            </div>
-         </div>
-         <div ng-show="rankedDocs">
-           <div ng-repeat="doc in rankedDocs | docPage:page" class="doc-item">
-              <div class="doc-header">
-              <span class="doc-score">{{doc.ranks[rankerName].rank}}</span>
-              <a class="doc-ref" href="{{doc.url}}">{{doc.title}}</a>
-              <span class="doc-date">{{doc.publishedDate}}</span>
-              </div>
-              <div class="doc-body">
-                <img class="doc-image" ng-show="doc.image" src="{{doc.image}}"/>
-                <div class="doc-summary">{{doc.summary}}</div>
-              </div>
-              <div ng-show="doc.topics.length || doc.tags.length || doc.entities.length">
-                <img class="doc-extra-img"
-                   ng-show="!shown[doc.url]"
-                   ng-click="toggleDocExtras(doc.url)"
-                   ng-src="{{dataUrl + 'images/arrow-right.png'}}"/>
-               <img class="doc-extra-img"
-                   ng-show="shown[doc.url]"
-                   ng-click="toggleDocExtras(doc.url)"
-                   ng-src="{{dataUrl + 'images/arrow-down.png'}}"/>
-                <div ng-show="shown[doc.url]">
-                    <div ng-show="doc.topics.length">
-                      <span class="doc-extra-term">
-                        Topics:
-                      </span>
-                      <span>
-                        {{doc.topics.join(", ")}}
-                      </span>
-                    </div>
-                    <div ng-show="doc.tags.length">
-                      <span class="doc-extra-term">
-                        Tags:
-                      </span>
-                      <span>
-                        {{doc.tags.join(", ")}}
-                      </span>
-                    </div>
-                    <div ng-show="doc.entities.length">
-                      <span class="doc-extra-term">
-                        Entities:
-                      </span>
-                      <span>
-                        {{doc.entities.join(", ")}}
-                      </span>
-                    </div>
-                </div>
-              </div>
-           </div>
-         </div>
-        </div>
-    </body>
+ <body ng-cloak>
+   <div ng-controller="MainController">
+     <div class="navigate">
+      <span><a href="" ng-click="navigate('score')">Score</a></span>
+      <span><a href="" ng-click="navigate('site')">Site</a></span>
+     </div>
+     <div ng-show="state.score">
+        <div ng-include="'docScoresView.html'"></div>
+     </div>
+     <div ng-show="state.site">
+     </div>
+   </div>
+ </body>
 </html>
