--- a/data/debug.html
+++ b/data/debug.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="newsDebugApp">
+<html>
     <head>
         <meta charset="utf-8">
         <title>About News Debug</title>
