--- a/data/news.html
+++ b/data/news.html
@@ -14,6 +14,7 @@
         <div ng-include="'docScoresView.html'"></div>
      </div>
      <div ng-show="state.site">
+        <div ng-include="'siteView.html'"></div>
      </div>
    </div>
  </body>
